--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        <center>My first Webpage</center>
+        <center>About me</center>
     </h1>
     <h2>Name: Anuj S Agrawal</h2>
     <img src="IMG-20191122-WA0003.jpg" alt="My picture">
