--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 </head>
 <body>
     <h1>
-        <center>About me</center>
+        <center><u>About me</u></center>
     </h1>
-    <h2>Name: Anuj S Agrawal</h2>
+    <h2><u>Name</u>: Anuj S Agrawal</h2>
     <img src="IMG-20191122-WA0003.jpg" alt="My picture">
     <div> 
         <!--Made a new division for Education-->
-        <h3><strong>Education</strong></h3>
+        <h3><strong><u>Education</u></strong></h3>
         <tag id="Education">
             <p>I am a first year undergraduate in Chemical Engineering at <a href="http://www.iitb.ac.in/" title="Official Website" target="_blank"><strong>IIT Bombay.</strong></a></p>
         </tag>
     </div>
-    <h3>Hobbies</h3>
-    <ol>
-        <li><code style="color:blue">Reading</code></li>
-        <li><code style="color:blue">Outdoor Sports</code></li>
-        <li><code style="color:blue">Quizzing</code></li>
-    </ol>
-    <h3>Ambitions</h3>
-    <p>I wish to make a mark in the world in whatever field I work in. <p></p> Currently exploring different avenues and career options.</p>
+    <h3><u>Hobbies</u></h3>
+    <ul>
+        <li><code style="color:black">I love reading mystery thrillers, mythology and other fiction</code></li>
+        <li><code style="color:black">I am always up for sports like Badminton, Cricket, Football and Chess</code></li>
+        <li><code style="color:black">Quizzing and discussing about Current Affairs is my favourite pastime.</code></li>
+    </ul>
+    <h3><u>Ambitions</u></h3>
+    <p>I wish to make a mark in the world in whatever field I work in. Currently exploring different avenues and career options.</p>
+    <h3><center><u>Contact Me</u></center></h3>
+    <p><centre>anujsagrawal22@gmail.com<p></p>8600021323</centre></p> 
 </body>
 </html>
