--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <h3><u>Ambitions</u></h3>
     <p>I wish to make a mark in the world in whatever field I work in. Currently exploring different avenues and career options.</p>
     <h3><center><u>Contact Me</u></center></h3>
-    <p><centre>anujsagrawal22@gmail.com<p></p>8600021323</centre></p> 
+    <centre><p><strong>Email ID-</strong>anujsagrawal22@gmail.com<p></p><strong>Contact No.-</strong>8600021323</p></centre> 
 </body>
 </html>
